--- a/scss/base/_querries.scss
+++ b/scss/base/_querries.scss
@@ -1,4 +1,45 @@
 @media only screen and (max-width: 768px) {
+    section {
+        div {
+            .title {
+                font-size: 60px;
+            }
+        }
+    }
+
+    .navi {
+        div {
+            .ref {
+                font-size: 30px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    section {
+        div {
+            .title {
+                font-size: 50px;
+            }
+        }
+    }
+
+    .navi {
+        div {
+            .ref {
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+
+
+
+
+
+@media only screen and (max-width: 768px) {
 
     .aboutus {
         display: flex;
@@ -73,5 +114,90 @@
         height: 20px;
         width: 20px;
         margin: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+
+    .important {
+        .subt {
+            h2 {
+                font-size: 50px;
+                font-weight: 300;
+            }
+        }
+
+        img {
+            height: 20rem;
+            width: 15rem;
+            margin: 5px;
+        }
+
+        p {
+            font-size: 30px;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 480px) {
+
+    .important {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-content: center;
+
+        .subt {
+            h2 {
+                margin-top: 30px;
+                font-size: 50px;
+                font-weight: 300;
+            }
+        }
+
+        img {
+            height: 15rem;
+            width: 10rem;
+            margin: 5px;
+        }
+
+        p {
+            font-size: 20px;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .contact {
+        .text {
+            h1 {
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .contact {
+
+        .text {
+            h1 {
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 20px;
+            }
+        }
+        .formthing{
+            margin-right: 100px ;
+        }
     }
 }
