--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -7,7 +7,7 @@ header {
 
     .title {
         text-align: center;
-        font-size: 81.9px !important;
+        font-size: 81.9px;
         color: #e8ba56cc;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: 700;
